--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 		<p id="update">Just nu uppdaterar vi hate.me så det blir bättre</p>
 		<button id="btn" onclick="startAnimation()">Visa animation</button>
 	</div>
+	<div class="container">
+  <h1>hate.me</h1>
+  <p>Just nu uppdaterar vi hate.me så det blir bättre</p>
+  <div class="loader"></div>
+</div>
+
 
 	<script src="script.js"></script>
 </body>
