--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>HATE.ME uppdatering</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="loader.css">
 </head>
 <body>
 	<div class="container">
