--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <body>
 	<div class="container">
 		<h1>HATE.ME</h1>
-		<p id="update">Just nu uppdaterar vi hate.me så det blir bättre</p>
-		<button id="btn" onclick="startAnimation()">Visa animation</button>
+		<p id="update">Laddar...</p>
 	</div>
 	<div class="container">
   <h1>hate.me</h1>
