--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</div>
 	<div class="container">
   <h1>hate.me</h1>
-  <p>Just nu uppdaterar vi hate.me så det blir bättre</p>
+  <p>ERROR; Syntax error_ Server crashed! ERR: 786</p>
   <div class="loader"></div>
 </div>
 	<script src="script.js"></script>
