--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 	<div class="container">
 		<h1>HATE.ME</h1>
-		<p id="update">Laddar...</p>
+		<p id="update">ERROR; Syntax error_ Server crashed! ERR: 786</p>
+		<p> </p>
+		<p> DID YOU KNOW: There are 8 billion people on earth! </p>
 	</div>
 	<div class="container">
   <h1>hate.me</h1>
