--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<h1>HATE.ME</h1>
 		<p id="update">ERROR; Syntax error_ Server crashed! ERR: 786</p>
 		<p> </p>
-		<p> DID YOU KNOW: There are 8 billion people on earth! </p>
+		<p id="update">DID YOU KNOW: There are 8 billion people on earth!</p>
 	</div>
 	<div class="container">
   <h1>hate.me</h1>
