--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 	<div class="container">
 		<h1>HATE.ME</h1>
-		<p id="update", "white-text">ERROR; Syntax error_ Server crashed! ERR: 786</p>
+		<p id="update"> <p id="white-text"> ERROR; Syntax error_ Server crashed! ERR: 786</p>
 		<p> </p>
-		<p id="update", "white-text">DID YOU KNOW: There are not 9 million people on earth!</p>
+		<p id="update"> <p id="white-text"> DID YOU KNOW: There are not 9 million people on earth!</p>
 	</div>
 	<div class="container">
   <h1>hate.me</h1>
