--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<h1>HATE.ME</h1>
 		<p id="update", id="white-text"> ERROR; Syntax error_ Server crashed! ERR: 786</p>
 		<p> </p>
-		<p id="update", id="white-text"> DID YOU KNOW: There are not 9 billion people on earth!</p>
+		<p id="update", id="white-text"> DID YOU KNOW: An elephant has 100,000 muscles in just its trunk!</p>
 	</div>
 	<div class="container">
   <h1>hate.me</h1>
