--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>HATE.ME uppdatering</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="loader.css">
+	<link rel="icon" href="SharedScreenshot.png" type="image/png">
 </head>
 <body>
 	<div class="container">
