--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HATE.ME uppdatering</title>
+	<title>HATE.ME - HATE, LOVE AND CRY!</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="loader.css">
 	<link rel="icon" href="SharedScreenshot.png" type="image/png">
