--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
 	<div class="container">
 		<h1>HATE.ME</h1>
-		<p id="update", id="white-text"> ERROR; Syntax error_ Server crashed! ERR: 786</p>
-		<p> </p>
-		<p id="update", id="white-text"> DID YOU KNOW: An elephant has 100,000 muscles in just its trunk!</p>
+		<p id="update", id="white-text">-Fear is the way to the dark side. Fear leads to anger, anger leads to hate, hate leads to suffering. <strong>Hate.me comming very soon</strong></p>
 	</div>
 	<div class="container">
   <h1>hate.me</h1>
