--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
 	<div class="container">
 		<h1>HATE.ME</h1>
-		<p id="update", id="white-text">-Fear is the way to the dark side. Fear leads to anger, anger leads to hate, hate leads to suffering. <strong>Hate.me comming very soon</strong></p>
+		<p id="update", id="white-text">Hate.me har några<strong>regler</strong> detta är våra</strong>:
+	<li>Inget <strong>sexuelt</strong></li>
+	<li>Inget <strong>snack om droger, alkoholl eller några olagliga substanser</strong></li>
+	<li>Inget <strong>Reklam, spam eller marknadsförning</strong></li>
+	<li>Inget <strong>krenkande om Äger, Dev eller Admin</strong></li></p>
 	</div>
 	<div class="container">
   <h1>hate.me</h1>
