--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 	<div class="container">
 		<h1>HATE.ME</h1>
-		<p id="update", id="white-text">Hate.me har några<strong>regler</strong> detta är våra</strong>:
-	<li>Inget <strong>sexuelt</strong></li>
+		<p id="update", id="white-text">Hate.me har några <strong>regler</strong> detta är våra<strong>regler</strong>:</p>
+	<p id="update"><li>Inget <strong>sexuelt</strong></li>
 	<li>Inget <strong>snack om droger, alkoholl eller några olagliga substanser</strong></li>
 	<li>Inget <strong>Reklam, spam eller marknadsförning</strong></li>
 	<li>Inget <strong>krenkande om Äger, Dev eller Admin</strong></li></p>
