--- a/index.html
+++ b/index.html
@@ -5,22 +5,15 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="loader.css">
 	<link rel="icon" href="SharedScreenshot.png" type="image/png">
+	<meta charset="UTF-8">
+	<meta http-equiv="refresh" content="5;url=https://ilovegithub122.github.io/my-amezing-project/">
 </head>
 <body>
 	<div class="container">
 		<h1>HATE.ME</h1>
-		<p id="update", id="white-text">Hate.me har några <strong>regler</strong> detta är våra <strong>regler</strong>:</p>
-        <div class="container">
-		<p id="update"> <li>Inget <strong>sexuelt</strong></li>
-	        <li>Inget <strong>snack om droger, alkoholl eller några olagliga substanser</strong></li>
-	        <li>Inget <strong>Reklam, spam eller marknadsförning</strong></li>
-	        <li>Inget <strong>krenkande om Äger, Dev eller Admin</strong></li></p>
+		<p id="update", id="white-text">Laddar... Vänta.
+			Detta kan ta minst <strong>5</strong></p>
 	</div>
-	<div class="container">
-  <h1>hate.me</h1>
-  <p>ERROR; Syntax error_ Server crashed! ERR: 786</p>
-  <div class="loader"></div>
-</div>
 	<script src="script.js"></script>
 </body>
 </html>
