--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="container">
 		<h1>HATE.ME</h1>
 		<p id="update", id="white-text">Laddar... Vänta.
-			Detta kan ta minst <strong>5</strong></p>
+			Detta kan ta minst <strong>5 sekunder</strong></p>
 	</div>
 	<script src="script.js"></script>
 </body>
