--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 	<div class="container">
 		<h1>HATE.ME</h1>
-		<p id="update", id="white-text">Laddar... Vänta.</p>
-		<p id="update">Detta kan ta minst <strong>5 sekunder</strong></p>
+		<p id="update", id="white-text">Laddar... Vänta. 
+		Detta kan ta minst <strong>5 sekunder</strong></p>
 		<p> </p>
 		<p id="update"><strong>VISSTE DU:</strong>Att myror är väldigt starka!</p>
 	</div>
