--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1>love.ME</h1>
+		<h1>HATE.ME</h1>
 		<p id="update", id="white-text">Laddar... Vänta. 
 		Detta kan ta minst <strong>5 sekunder</strong></p>
 		<p> </p>
