--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="loader.css">
 	<link rel="icon" href="SharedScreenshot.png" type="image/png">
-	<meta charset="UTF-8">
-	<meta http-equiv="refresh" content="7;url=https://ilovegithub122.github.io/my-amezing-project/">
 </head>
 	<button id="settings-btn" onclick="window.location.href = 'https://swedishdiamond.editorx.io/lancher/blank-2';">Support</button>
 <body>
 	<div class="container">
 		<h1>HATE.ME</h1>
-		<p id="update", id="white-text">Laddar... Vänta. 
-		Detta kan ta minst <strong>5 sekunder</strong></p>
+		<p id="update", id="white-text">Updaterar...
+		Detta kan ta minst <strong>30 min</strong></p>
 		<p> </p>
 		<p id="update"><strong>VISSTE DU:</strong> Att myror är väldigt starka!</p>
 	</div>
