--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<h1>HATE.ME</h1>
-		<p id="update", id="white-text">Updaterar...
+		<p id="update", id="white-text">Laddar... Vänta!
 		Detta kan ta minst <strong>30 min</strong></p>
 		<p> </p>
 		<p id="update"><strong>VISSTE DU:</strong> Att myror är väldigt starka!</p>
