--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="loader.css">
 	<link rel="icon" href="SharedScreenshot.png" type="image/png">
+	<meta charset="UTF-8">
+	<meta http-equiv="refresh" content="7;url=https://ilovegithub122.github.io/my-amezing-project/">
 </head>
 	<button id="settings-btn" onclick="window.location.href = 'https://swedishdiamond.editorx.io/lancher/blank-2';">Support</button>
 <body>
