--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<h1>HATE.ME</h1>
 		<p id="update", id="white-text">Laddar... Vänta!
-		Detta kan ta minst <strong>30 min</strong></p>
+		Detta kan ta minst <strong>5 sek</strong></p>
 		<p> </p>
 		<p id="update"><strong>VISSTE DU:</strong> Att myror är väldigt starka!</p>
 	</div>
