--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="refresh" content="7;url=https://ilovegithub122.github.io/my-amezing-project/">
 </head>
-	<button id="settings-btn" onclick="window.location.href = 'https://swedishdiamond.editorx.io/lancher/blank-2';">Support</button>
+	<button id="settings-btn" onclick="window.location.href = 'https://swedishdiamond.editorx.io/lancher';">Back</button>
 <body>
 	<div class="container">
 		<h1>HATE.ME</h1>
