--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
 		Detta kan ta minst <strong>5 sek</strong></p>
 		<p> </p>
 		<p id="update"><strong>VISSTE DU:</strong> Att myror är väldigt starka!</p>
+		<div class=".loader"></div>
+		<style>
+	 .loader {
+        border: 16px solid #f3f3f3;
+        border-top: 16px solid #832424;
+        border-radius: 50%;
+        width: 120px;
+        height: 120px;
+        animation: spin 2s linear infinite;
+        margin: 0 auto;
+      }
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+		</style>
 	</div>
 	<script src="script.js"></script>
 </body>
